--- a/styles.css
+++ b/styles.css
@@ -8,25 +8,52 @@
     --open-sans: 'Open Sans', sans-serif;
   }
 
+  html {
+    height: 100% !important;
+  }
+  body {
+    min-height: 100% !important;
+  }
+
+
   section {
       font-family: var(--ibm-plex) !important;
   }
+/* 
+  .hero.is-info {
+      height: 100% !important;
+  } */
 
   #main-title {
-      margin-bottom: 4vmin;
+    font-size: 5rem;
+      margin-bottom: 3rem;
+      text-shadow: 0 4px 5px rgba(60,72,96,.5);
+  color: #f0edf2;
+  -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+  -webkit-animation-duration: 0.1s;
+  animation-duration: 0.1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: zoomIn;
+  animation-name: zoomIn;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #fff;
+  text-shadow: 
+    rgb(255, 255, 255) 0px 0px 175px,
+    rgb(255, 255, 255) 0px 0px 10px,
+    rgb(255, 255, 255) 0px 0px 1px, 
+    rgb(0, 51, 128) 0px 0px 100px, 
+    rgb(0, 51, 128) 0px 0px 250px;
   }
 
   #pitch-text, .subtitle {
     font-family: var(--open-sans) !important;
 }
 
-  h1.title {
-      font-size: 5vmin;
-  }
-
   .hero.is-info {
       background-color: var(--blue);
-      height: 100vh;
+      /* height: 100vh; */
   }
 
   .hero-body {
@@ -34,7 +61,7 @@
   }
 
   .button.is-rounded {
-    margin: 5vmin;
+    margin: 3rem;
   }
 
   /* .button.is-success {
@@ -42,10 +69,9 @@
   } */
 
   #generate-btn {
-    width: 20vmin;
-    height: 5vmin;
-    /* font-family: 'Roboto', sans-serif; */
-    font-size: 2vmin;
+    width: 12rem;
+    height: 4rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
     letter-spacing: 2.5px;
     font-weight: 500;
@@ -59,7 +85,7 @@
     outline: none;
     }
   
-  #generate-btn:hover {
+  #generate-btn:hover, #generate-btn:active {
     background-color: #2EE59D;
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: #fff;
@@ -68,7 +94,7 @@
 
   .card {
     border-radius: 15px;
-    box-shadow: 0px 25px 35px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 25px 35px rgba(0, 0, 0, 0.4);
   }
 
   .card > .card-content > .title {
@@ -81,4 +107,16 @@
 
   .card-content {
       padding: 5.5rem;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .section.is-medium {
+        padding: 4rem 1.5rem;
+    }      
+  }
+
+  @media screen and (max-width: 450px) {
+    .card-content {
+        padding: 1.5rem;
+    }      
   }
