--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,33 @@
       text-shadow: 0 4px 5px rgba(60,72,96,.5);
   color: #f0edf2;
   -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  -ms-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
   -webkit-animation-duration: 0.1s;
+  -moz-animation-duration: 0.1s;
+  -o-animation-duration: 0.1s;
+  -ms-animation-duration: 0.1s;
   animation-duration: 0.1s;
   -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
   animation-fill-mode: both;
   -webkit-animation-name: zoomIn;
+  -moz-animation-name: zoomIn;
+  -o-animation-name: zoomIn;
+  -ms-animation-name: zoomIn;
   animation-name: zoomIn;
   -webkit-text-stroke-width: 1px;
+  -moz-text-stroke-width: 1px;
+  -o-text-stroke-width: 1px;
+  -ms-text-stroke-width: 1px;
   -webkit-text-stroke-color: #fff;
+  -moz-text-stroke-color: #fff;
+  -o-text-stroke-color: #fff;
+  -ms-text-stroke-color: #fff;
   text-shadow: 
     rgb(255, 255, 255) 0px 0px 175px,
     rgb(255, 255, 255) 0px 0px 10px,
@@ -85,7 +103,7 @@
     outline: none;
     }
   
-  #generate-btn:hover, #generate-btn:active {
+  #generate-btn:hover{
     background-color: #2EE59D;
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: #fff;
