--- a/styles.css
+++ b/styles.css
@@ -1,140 +1,108 @@
 :root {
-    --crimson: #E62048;
-    --orange: #FA6650;
-    --yellow: #FFD23F;
-    --green: #1AA15C;
-    --blue: #177E89;
-    --ibm-plex: 'IBM Plex Mono', monospace;
-    --open-sans: 'Open Sans', sans-serif;
-  }
+  --crimson: #e62048;
+  --orange: #fa6650;
+  --yellow: #ffd23f;
+  --green: #1aa15c;
+  --blue: #177e89;
+  --ibm-plex: "IBM Plex Mono", monospace;
+  --open-sans: "Open Sans", sans-serif;
+}
 
-  html {
-    height: 100% !important;
-  }
-  body {
-    min-height: 100% !important;
-  }
+html {
+  height: 100% !important;
+}
+body {
+  min-height: 100% !important;
+}
 
-
-  section {
-      font-family: var(--ibm-plex) !important;
-  }
+section {
+  font-family: var(--ibm-plex) !important;
+}
 /* 
   .hero.is-info {
       height: 100% !important;
   } */
 
-  #main-title {
-    font-size: 5rem;
-      margin-bottom: 3rem;
-      text-shadow: 0 4px 5px rgba(60,72,96,.5);
-  color: #f0edf2;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  -o-font-smoothing: antialiased;
-  -ms-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-  -webkit-animation-duration: 0.1s;
-  -moz-animation-duration: 0.1s;
-  -o-animation-duration: 0.1s;
-  -ms-animation-duration: 0.1s;
-  animation-duration: 0.1s;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-  -o-animation-fill-mode: both;
-  -ms-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-name: zoomIn;
-  -moz-animation-name: zoomIn;
-  -o-animation-name: zoomIn;
-  -ms-animation-name: zoomIn;
-  animation-name: zoomIn;
-  -webkit-text-stroke-width: 1px;
-  -moz-text-stroke-width: 1px;
-  -o-text-stroke-width: 1px;
-  -ms-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #fff;
-  -moz-text-stroke-color: #fff;
-  -o-text-stroke-color: #fff;
-  -ms-text-stroke-color: #fff;
-  text-shadow: 
-    rgb(255, 255, 255) 0px 0px 175px,
-    rgb(255, 255, 255) 0px 0px 10px,
-    rgb(255, 255, 255) 0px 0px 1px, 
-    rgb(0, 51, 128) 0px 0px 100px, 
-    rgb(0, 51, 128) 0px 0px 250px;
-  }
-
-  #pitch-text, .subtitle {
-    font-family: var(--open-sans) !important;
+#main-title {
+  font-size: 5rem;
+  margin-bottom: 3rem;
+  text-shadow: 0 4px 5px var(--yellow);
+  color: white;
+  text-shadow: white 0px 0px 175px, white 0px 0px 10px, white 0px 0px 1px,
+    var(--yellow) 0px 0px 0px, var(--yellow) 0px 0px 0px;
 }
 
-  .hero.is-info {
-      background-color: var(--blue);
-      /* height: 100vh; */
-  }
+#pitch-text,
+.subtitle {
+  font-family: var(--open-sans) !important;
+}
 
-  .hero-body {
-      text-align: center;
-  }
+.hero.is-info {
+  background-color: var(--blue);
+  /* height: 100vh; */
+}
 
-  .button.is-rounded {
-    margin: 3rem;
-  }
+.hero-body {
+  text-align: center;
+}
 
-  /* .button.is-success {
+.button.is-rounded {
+  margin: 3rem;
+}
+
+/* .button.is-success {
       background-color: var(--orange);
   } */
 
-  #generate-btn {
-    width: 12rem;
-    height: 4rem;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: var(--yellow);
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    }
-  
-  #generate-btn:hover{
-    background-color: #2EE59D;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
+#generate-btn {
+  width: 12rem;
+  height: 4rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: var(--yellow);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
 
-  .card {
-    border-radius: 15px;
-    box-shadow: 0px 25px 35px rgba(0, 0, 0, 0.4);
-  }
+#generate-btn:hover {
+  background-color: #2ee59d;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
 
-  .card > .card-content > .title {
-      color: black;
-  }
+.card {
+  border-radius: 15px;
+  box-shadow: 0px 25px 35px rgba(0, 0, 0, 0.4);
+}
 
-  .card > .card-content > .subtitle {
-    color: black;
-  }
+.card > .card-content > .title {
+  color: black;
+}
 
+.card > .card-content > .subtitle {
+  color: black;
+}
+
+.card-content {
+  padding: 5.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .section.is-medium {
+    padding: 4rem 1.5rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
   .card-content {
-      padding: 5.5rem;
+    padding: 1.5rem;
   }
-
-  @media screen and (min-width: 1024px) {
-    .section.is-medium {
-        padding: 4rem 1.5rem;
-    }      
-  }
-
-  @media screen and (max-width: 450px) {
-    .card-content {
-        padding: 1.5rem;
-    }      
-  }
+}
