--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,14 @@ section {
     var(--yellow) 0px 0px 0px, var(--yellow) 0px 0px 0px;
 }
 
+strong {
+  text-decoration: underline;
+}
+
+.hero-footer > a {
+    color: white;
+}
+
 #pitch-text,
 .subtitle {
   font-family: var(--open-sans) !important;
@@ -105,4 +113,37 @@ section {
   .card-content {
     padding: 1.5rem;
   }
+}
+
+#finger {
+    animation: bounce 2s infinite;
+    position: absolute;
+    top: 10px;
+    -webkit-animation: bounce 2s infinite;
+	-moz-animation: bounce 2s infinite;
+	-o-animation: bounce 2s infinite;
+}
+
+
+@-webkit-keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}	
+	40% {-webkit-transform: translateY(-30px);}
+	60% {-webkit-transform: translateY(-15px);}
+}
+ 
+@-moz-keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+	40% {-moz-transform: translateY(-30px);}
+	60% {-moz-transform: translateY(-15px);}
+}
+ 
+@-o-keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+	40% {-o-transform: translateY(-30px);}
+	60% {-o-transform: translateY(-15px);}
+}
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+	40% {transform: translateY(-30px);}
+	60% {transform: translateY(-15px);}
 }
